feat: add Dozzle service to dashboard and update service counts

--- a/dashboard/dashboard.html
+++ b/dashboard/dashboard.html
@@ -477,7 +477,7 @@
                         <div class="status-label">Online</div>
                     </div>
                     <div class="status-item">
-                        <span class="status-count checking" id="monitoring-checking">3</span>
+                        <span class="status-count checking" id="monitoring-checking">4</span>
                         <div class="status-label">Checking</div>
                     </div>
                     <div class="status-item">
@@ -504,6 +504,12 @@
                         <div class="service-name">cAdvisor</div>
                         <div class="service-url">:8081</div>
                     </a>
+                    <a href="http://192.168.86.111:9999" class="service-card" data-service="dozzle" data-port="9999">
+                        <div class="status-indicator checking"></div>
+                        <div class="service-icon">📋</div>
+                        <div class="service-name">Dozzle</div>
+                        <div class="service-url">:9999</div>
+                    </a>
                 </div>
             </section>
 
@@ -521,7 +527,7 @@
                     </div>
                     <div class="info-card">
                         <div class="info-label">Services Running</div>
-                        <div class="info-value"><span id="total-services">12</span> Total</div>
+                        <div class="info-value"><span id="total-services">13</span> Total</div>
                     </div>
                     <div class="info-card">
                         <div class="info-label">mDNS Address</div>
